home work 9 lessons

--- a/home_work9_lessons/index.html
+++ b/home_work9_lessons/index.html
@@ -14,7 +14,7 @@
     <div class="title">Home work 9</div>
 asda
   </div>
-  <script src="./main.js"></script>
+  <script src="./it-school.js"></script>
 </body>
 
 </html>
