--- a/home_work13/index.html
+++ b/home_work13/index.html
@@ -11,7 +11,7 @@
 <body>
   <script src="./lesson.js"></script>
   <script src="./course.js"></script>
-  <script src="./group.js"></script>
+  <script src="./learning-group.js"></script>
   <script src="./it-school.js"></script>
   <script>
     // создание новой школы
