--- a/home_work14/index.html
+++ b/home_work14/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" />
   <link rel="stylesheet" href="./style.css">
   <title>Home work 14</title>
 </head>
@@ -12,8 +13,27 @@
 <body>
   <div class="_container">
     <div class="_title">Home work 14</div>
-    <div class="content">
-
+    <div class="calculator">
+      <div class="calculator__display">0</div>
+      <div class="calculator__keys">
+        <button data-key="plus" data-type="operator">+</button>
+        <button data-key="minus" data-type="operator">-</button>
+        <button data-key="times" data-type="operator">&times;</button>
+        <button data-key="divide" data-type="operator">÷</button>
+        <button data-key="1" data-type="number">1</button>
+        <button data-key="2" data-type="number">2</button>
+        <button data-key="3" data-type="number">3</button>
+        <button data-key="4" data-type="number">4</button>
+        <button data-key="5" data-type="number">5</button>
+        <button data-key="6" data-type="number">6</button>
+        <button data-key="7" data-type="number">7</button>
+        <button data-key="8" data-type="number">8</button>
+        <button data-key="9" data-type="number">9</button>
+        <button data-key="0" data-type="number">0</button>
+        <button class="decimal" data-type="number">.</button>
+        <button class="clear" data-type="clear">C</button>
+        <button data-key="equal" data-type="equal">=</button>
+      </div>
     </div>
   </div>
   <script src="./script.js"></script>
