--- a/home_work19/index.html
+++ b/home_work19/index.html
@@ -13,6 +13,13 @@
   <div class="_container">
     <div class="_title">Home work 19</div>
     
+    <p>Введите число от 5 до 10:</p>
+    
+    <input id="demo" type="text">
+    <button type="button" onclick="myFunction()">Проверка ввода</button>
+    <p id="p01"></p>
+
+
   </div>
   <script src="./main.js"></script>
 </body>
