--- a/home_work19/index.html
+++ b/home_work19/index.html
@@ -12,12 +12,7 @@
 <body>
   <div class="_container">
     <div class="_title">Home work 19</div>
-    
-    <p>Введите число от 5 до 10:</p>
-    
-    <input id="demo" type="text">
-    <button type="button" onclick="myFunction()">Проверка ввода</button>
-    <p id="p01"></p>
+    <div class="wrapper"></div>
 
 
   </div>
